# tantivy-node

./: .gitignore  README.md  example.js  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
test/: basic.js
