[package]
name = "tantivy-node"
version = "0.1.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "tantivy"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
neon-serde = "0.1.1"
serde_derive = "1.0.80"
serde = "1.0.80"
tantivy = "0.8.0"
serde_json = "1.0"

