[package]
name = "tantivy-node"
version = "0.1.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "tantivy"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
serde_derive = "1.0.80"
serde = "1.0.80"
tantivy = "0.8.0"
serde_json = "1.0"
napi-rs = { git = "https://github.com/Frando/napi-rs.git", rev = "ff273fa" }
# napi-rs = { path = "../../napi-rs" }
